changes with new version of api and added Makefile
