# internal/model/model.go
@@ -1,4 +1,4 @@
-// Package Openapi provides primitives to interact with the openapi HTTP API.
+// Package model provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package model
@@ -17,20 +17,29 @@ type Error struct {
 	Message string `json:"message"`
 }
 
+// FoodItems defines model for FoodItems.
+type FoodItems struct {
+	// like, dislike or loved it
+	Experience string `json:"experience"`
+
+	// name of the food item
+	Name string `json:"name"`
+}
+
 // FoodPost defines model for FoodPost.
 type FoodPost struct {
-	Address1       *string    `json:"address1,omitempty"`
-	Address2       *string    `json:"address2,omitempty"`
-	City           *string    `json:"city,omitempty"`
-	Country        *string    `json:"country,omitempty"`
-	Date           *time.Time `json:"date,omitempty"`
-	Experience     string     `json:"experience"`
-	FoodItems      []string   `json:"foodItems"`
-	Id             string     `json:"id"`
-	Notes          *string    `json:"notes,omitempty"`
-	RestaurantName string     `json:"restaurantName"`
-	State          *string    `json:"state,omitempty"`
-	Zip            *string    `json:"zip,omitempty"`
+	Address1       *string     `json:"address1,omitempty"`
+	Address2       *string     `json:"address2,omitempty"`
+	City           *string     `json:"city,omitempty"`
+	Country        *string     `json:"country,omitempty"`
+	Date           *time.Time  `json:"date,omitempty"`
+	Experience     *string     `json:"experience,omitempty"`
+	FoodItems      []FoodItems `json:"foodItems"`
+	Id             *string     `json:"id,omitempty"`
+	Notes          *string     `json:"notes,omitempty"`
+	RestaurantName string      `json:"restaurantName"`
+	State          *string     `json:"state,omitempty"`
+	Zip            *string     `json:"zip,omitempty"`
 }
 
 // FoodPostsList defines model for FoodPostsList.
@@ -51,4 +60,3 @@ type CreateFoodPostParams struct {
 
 // CreateFoodPostJSONRequestBody defines body for CreateFoodPost for application/json ContentType.
 type CreateFoodPostJSONRequestBody CreateFoodPostJSONBody
-
